# fireshot

./: CMakeLists.txt  README.md  fireshot.cpp  fireshot.h  main.cpp  pro2cmake.py
3rd/spdlog/: logger.h
3rd/spdlog/fmt/bundled/: format.h
core/: screen_catcher.cpp  screen_catcher.h  screen_list.h  screen_shot.cpp  screen_shot.h  screen_widget.cpp  screen_widget.h  screen_workspace.cpp  screen_workspace.h  widget.cpp
data/: flameshot.rc
data/desktopEntry/package/: org.flameshot.Flameshot.desktop
data/translations/: Internationalization_fi.ts
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt
src/config/: CMakeLists.txt  generalconf.cpp  generalconf.h  shortcutswidget.cpp  shortcutswidget.h  styleoverride.cpp
src/core/: CMakeLists.txt  flameshot.cpp  flameshot.h  flameshotdaemon.cpp  flameshotdaemon.h  globalshortcutfilter.cpp  qguiappcurrentscreen.cpp
src/tools/: CMakeLists.txt  capturecontext.h  toolfactory.cpp
src/tools/accept/: accepttool.cpp
src/tools/imgupload/storages/: imguploaderbase.cpp
src/tools/pin/: pinwidget.cpp
src/utils/: CMakeLists.txt  confighandler.cpp  confighandler.h  globalvalues.cpp  screengrabber.cpp  screenshotsaver.cpp  systemnotification.cpp
src/widgets/: CMakeLists.txt  capturelauncher.cpp  infowindow.cpp  trayicon.cpp  trayicon.h  uploadlineitem.cpp
src/widgets/capture/: CMakeLists.txt  capturetoolbutton.cpp  capturetoolbutton.h  capturewidget.cpp  capturewidget.h
src/widgets/panel/: CMakeLists.txt  colorgrabwidget.cpp  sidepanelwidget.cpp  utilitypanel.cpp
utils/: CMakeLists.txt  spdlog_wrapper.cpp  spdlog_wrapper.h
